# gnn-rl-routing-system

./: .env.example  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  README.md  SYSTEM_OVERVIEW.md  docker-compose.yml  example_network.csv  pyproject.toml  run.sh
app/: __init__.py  evaluate.py  train.py
app/api/: main.py
app/dashboard/: dashboard.py
app/models/: gnn_model.py
app/rl/: __init__.py  dqn_agent.py
app/utils/: graph_utils.py
