[project]
name = "network-routing-gnn-rl"
version = "1.0.0"
description = "Production-ready GNN + DQN dynamic network routing system"
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "torch-scatter",
    "torch-sparse",
    "networkx>=3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "scipy>=1.11.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
